sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: not found: value ecart
  for(i<- ecart to getTaille()-1){
          ^