sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var apresBleu=0
  var blancRouge= getTaille() -1
  var apresBlanc= getTaille() -1
  while(!estTrie){
  var v = 0
  for(i<- ecart to getTaille()-1){
    v = getCouleur(i)
    var j=i
    if(getCouleur(i)== Color.BLUE){
      while(j<apresBleu){
        echange(j-1,j)
        j=j-1
      }
      apresBleu+=1
    }
    j=i
    if(getCouleur(i)== Color.WHITE){
      while(j>apresBleu+1 && getCouleur(j-1)!=getCouleur(j)){
        echange(j-1,j)
        j=j-1
        
      }
    }

  }
}
}